--- a/nfilm/src/components/Genres/genres.module.css
+++ b/nfilm/src/components/Genres/genres.module.css
@@ -39,7 +39,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  z-index: 9999;
+  /* z-index: 9999; */
   background-color: black;
   gap: 20px;
   min-height: 40px;
